--- a/PotassiumDeVera1stQtrProj/css/global.css
+++ b/PotassiumDeVera1stQtrProj/css/global.css
@@ -43,3 +43,16 @@ main.content {
     grid-area: content;
     font-size: 1.5rem;
 }
+
+/* Classes for Colors */
+.primaryColor {
+    color: var(--primary-color);
+}
+
+.secondaryColor {
+    color: var(--secondary-color);
+}
+
+.tertiaryColor {
+    color: var(--tertiary-color);
+}
