Created Articles List
There isn't any JavaScript interactivity yet. I am planning to store metadata about the articles in a JSON file and then process and present the data using JavaScript.

--- a/PotassiumDeVera1stQtrProj/css/global.css
+++ b/PotassiumDeVera1stQtrProj/css/global.css
@@ -33,7 +33,7 @@ body {
     ;
 
     /* Setting a global font family */
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 
     /* Removing margins in the body*/
     margin: 0;
