--- a/PotassiumDeVera1stQtrProj/css/global.css
+++ b/PotassiumDeVera1stQtrProj/css/global.css
@@ -24,7 +24,7 @@ body {
     display: grid;
 
     /* Subdividing the page into a header, content, and footer section */
-    grid-template-rows: 10vh auto 10vh;
+    grid-template-rows: 10vh auto auto;
     grid-template-columns: auto;
     grid-template-areas: 
     "header"
