--- a/PotassiumDeVera1stQtrProj/css/header.module.css
+++ b/PotassiumDeVera1stQtrProj/css/header.module.css
@@ -67,3 +67,15 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 1.5rem;
 }
+
+/* This will apply to smaller screens */
+@media screen and (max-width: 800px) {
+    .header[data-component] > .searchbar > #headerSearchbarInput {
+        display: none;
+    }
+
+    .header[data-component] > .searchbar {
+        background-color: transparent;
+        border: none;
+    }
+}
