--- a/PotassiumDeVera1stQtrProj/css/ImageHeader.module.css
+++ b/PotassiumDeVera1stQtrProj/css/ImageHeader.module.css
@@ -55,13 +55,13 @@ section.imageHeader > div.headerContent > div.headerText {
     justify-content: center;
     align-items: left;
 
-    /*This will apply a soft shadow*/
+    /* This will apply a soft shadow */
     box-shadow: 0px 2px 2px rgba(133, 90, 90, 0.06), 0px 4px 4px rgba(0,0,0,0.12), 0px 8px 8px rgba(0,0,0,0.18), 0px 16px 16px rgba(0,0,0,0.24), 0px 32px 32px rgba(0,0,0,0.30);
 
     position: relative;
     top: 0vw;
 
-    /*TODO This will animate the title*/
+    /* This will animate the title */
     animation: slideIn 2s ease-out 0s 1;
 }
 
