--- a/PotassiumDeVera1stQtrProj/css/ArticlePreview.module.css
+++ b/PotassiumDeVera1stQtrProj/css/ArticlePreview.module.css
@@ -1,6 +1,7 @@
 div.article {
     /* This will properly layout the images and text in the article preview */
     display: grid;
+    position: relative;
     width: 100%;
     grid-template-columns: clamp(0px, 30vw, 200px) 20px auto;
     grid-template-rows: repeat(auto, 4);
@@ -21,6 +22,39 @@ div.article {
     /*This will apply a soft shadow*/
     box-shadow: 0px 2px 2px rgba(0,0,0,0.03), 0px 4px 4px rgba(0,0,0,0.06), 0px 8px 8px rgba(0,0,0,0.09), 0px 16px 16px rgba(0,0,0,0.12), 0px 32px 32px rgba(0,0,0,0.15);
 }
+
+/* For animated article previews */
+/* -----------------------------------------*/
+@keyframes slideInFromLeft {
+    from {
+        right: 100vw;
+    }
+    
+    to {
+        right: 0;
+    }
+}
+
+@keyframes slideInFromRight {
+    from {
+        left: 100vw;
+    }
+    
+    to {
+        left: 0;
+    }
+}
+
+div.article.animated:nth-of-type(2n) {
+    /* The timing function is ease-out circular (autofilled by VsCode Intellisense) */
+    animation: slideInFromLeft 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+div.article.animated:nth-of-type(2n+1) {
+    /* The timing function is ease-out circular (autofilled by VsCode Intellisense) */
+    animation: slideInFromRight 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+/* -----------------------------------------*/
 
 div.article > div.image {
     grid-area: image;
