Added link styles to the 'read article' link on article previews

--- a/PotassiumDeVera1stQtrProj/css/global.css
+++ b/PotassiumDeVera1stQtrProj/css/global.css
@@ -16,6 +16,7 @@
     --primary-color: #FBFEE6;
     --secondary-color: #68B16A;
     --tertiary-color: #093E23;
+    --quaternary-color: #49393B;
 }
 
 body {
