Created a new article: How Carbon Dioxide Concentration Affects Cognition

--- a/PotassiumDeVera1stQtrProj/css/article.css
+++ b/PotassiumDeVera1stQtrProj/css/article.css
@@ -121,9 +121,54 @@ main.content > section.articleContent .centered {
     align-self: center;
 }
 
-main.content > section.articleContent p.caption {
+main.content > section.articleContent .caption {
     color: rgba(0,0,0,0.5);
     font-style: italic;
+    font-size: 1.25rem;
+}
+
+main.content > section.articleContent .inline {
+    display: inline;
+}
+
+main.content > section.articleContent .block {
+    display: block;
+}
+
+main.content > section.articleContent .imageFigureM {
+    max-width: 30%;
+}
+
+main.content > section.articleContent .imageFigureL {
+    max-width: 50%;
+}
+
+main.content > section.articleContent .imageFigureXL {
+    max-width: 70%;
+}
+
+main.content > section.articleContent .imageFigureXXL {
+    max-width: 100%;
+}
+
+.imageFigureM > img,
+.imageFigureL > img,
+.imageFigureXL > img,
+.imageFigureXXL > img {
+    max-width: 100%;
+}
+
+main.content > section.articleContent .verticallyPadded2vw {
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+}
+
+main.content > section.articleContent .floatLeft {
+    float: left;
+}
+
+main.content > section.articleContent .floatRight {
+    float: right;
 }
 
 /* This will remove the bullets before the reference list */
