--- a/PotassiumDeVera1stQtrProj/css/ArticlePreview.module.css
+++ b/PotassiumDeVera1stQtrProj/css/ArticlePreview.module.css
@@ -23,6 +23,16 @@ div.article {
     box-shadow: 0px 2px 2px rgba(0,0,0,0.03), 0px 4px 4px rgba(0,0,0,0.06), 0px 8px 8px rgba(0,0,0,0.09), 0px 16px 16px rgba(0,0,0,0.12), 0px 32px 32px rgba(0,0,0,0.15);
 }
 
+/* Other themes */
+div.article.blackAndWhite {
+    background-color: white;
+    color: black;
+}
+
+div.article.blackAndWhite > h2.title {
+    color: black;
+}
+
 /* For animated article previews */
 /* -----------------------------------------*/
 @keyframes slideInFromLeft {
