Modified the article list results to use flexbox

--- a/PotassiumDeVera1stQtrProj/css/articleList.css
+++ b/PotassiumDeVera1stQtrProj/css/articleList.css
@@ -51,4 +51,9 @@ section.searchbar > #searchbarInput {
 main.content > section.results {
     grid-area: results;
     margin: 0 2vw;
+
+    /* This will ensure that the articles will be laid out vertically */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
